--- a/composer.json
+++ b/composer.json
@@ -30,5 +30,10 @@
     "require-dev": {
         "phpunit/phpunit": "^5.6",
         "squizlabs/php_codesniffer": "^2.3"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0-dev"
+        }
     }
 }
