--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,11 @@
     "name": "pdavila13/curriculum",
     "type": "library",
     "description": "Package curriculum",
+    "keywords": [
+        "scool",
+        "curriculum",
+        "laravel"
+    ],
     "homepage": "https://github.com/pdavila13/curriculum",
     "license": "MIT",
     "authors": [
@@ -12,7 +17,6 @@
             "role": "Developer"
         }
     ],
-    "minimum-stability": "dev",
     "require": {
         "laravel/framework": "5.4.*",
         "fzaninotto/faker": "^1.6",
@@ -23,18 +27,31 @@
         "spatie/laravel-permission": "^1.11",
         "barryvdh/laravel-cors": "^0.8.6"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^5.6",
+        "squizlabs/php_codesniffer": "^2.3"
+    },
     "autoload": {
         "psr-4": {
             "Scool\\Curriculum\\": "src"
         }
     },
-    "require-dev": {
-        "phpunit/phpunit": "^5.6",
-        "squizlabs/php_codesniffer": "^2.3"
+    "autoload-dev": {
+        "psr-4": {
+            "Scool\\Curriculum\\": "tests"
+        }
+    },
+    "scripts": {
+        "test": "phpunit",
+        "check-style": "phpcs -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests",
+        "fix-style": "phpcbf -p --standard=PSR2 --runtime-set ignore_errors_on_exit 1 --runtime-set ignore_warnings_on_exit 1 src tests"
     },
     "extra": {
         "branch-alias": {
             "dev-master": "1.0-dev"
         }
+    },
+    "config": {
+        "sort-packages": true
     }
 }
