Change name package

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "pdavila13/curriculum",
+    "name": "scool/curriculum",
     "type": "library",
     "description": "Package curriculum",
     "keywords": [
